# QLang

./: .clang-format  .gitignore  CMakeLists.txt  README.md  a.out
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cmake-single-platform.yml
example/: fib.q  main.q  test.q  vec3.q  vec3.qh
example/donut/: main.q
example/fib/: main.q
example/macro/: main.q
example/math/include/: vec3.qh
example/math/src/: main.q  vec3.q
example/std/: assert.qh  stdio.qh  stdlib.qh  string.qh  time.qh
example/stdhdrs/: assert.qh  stdio.qh  stdlib.qh  string.qh  time.qh
example/test/: main.q
include/QLang/: Builder.hpp  Context.hpp  Expression.hpp  Function.hpp  Linker.hpp  Macro.hpp  Operator.hpp  Parser.hpp  QLang.hpp  SourceLocation.hpp  Statement.hpp  Token.hpp  Type.hpp  Value.hpp
q/src/: main.cpp
src/: builder.cpp  context.cpp  create_function.cpp  function.cpp  linker.cpp  macro.cpp  next_token.cpp  parser.cpp  source_location.cpp  token.cpp  value.cpp
src/expression/: binary_expression.cpp  call_expression.cpp  cast_expression.cpp  const_expression.cpp  expression.cpp  function_expression.cpp  index_expression.cpp  member_expression.cpp  name_expression.cpp  ternary_expression.cpp  unary_expression.cpp
src/operator/: gen_add.cpp  gen_and.cpp  gen_ashr.cpp  gen_call.cpp  gen_cast.cpp  gen_dec.cpp  gen_deref.cpp  gen_div.cpp  gen_eq.cpp  gen_ge.cpp  gen_gt.cpp  gen_inc.cpp  gen_land.cpp  gen_le.cpp  gen_lnot.cpp  gen_lor.cpp  gen_lshr.cpp  gen_lt.cpp  gen_lxor.cpp  gen_member.cpp  gen_mul.cpp  gen_ne.cpp  gen_neg.cpp  gen_not.cpp  gen_or.cpp  gen_ref.cpp  gen_rem.cpp  gen_shl.cpp  gen_sub.cpp  gen_subscript.cpp  gen_xor.cpp
src/parse/: parse.cpp  parse_binary.cpp  parse_call.cpp  parse_cd_if.cpp  parse_cd_include.cpp  parse_cd_macro.cpp  parse_cd_use.cpp  parse_compile_directive.cpp  parse_compound.cpp  parse_def.cpp  parse_if.cpp  parse_include.cpp  parse_index.cpp  parse_macro.cpp  parse_member.cpp  parse_operand.cpp  parse_primary.cpp  parse_return.cpp  parse_statement.cpp  parse_type.cpp  parse_unary.cpp  parse_use.cpp  parse_while.cpp
src/statement/: compound_statement.cpp  def_fn_statement.cpp  def_var_statement.cpp  if_statement.cpp  return_statement.cpp  statement.cpp  while_statement.cpp
src/type/: array_type.cpp  function_type.cpp  pointer_type.cpp  reference_type.cpp  struct_type.cpp  type.cpp
